--- a/map.html
+++ b/map.html
@@ -13,7 +13,7 @@
     <meta charset="utf-8"/>
     <script type="text/javascript" src="map.js"></script>
     <script type="text/javascript"
-            src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDNgjZRE6LjvRcVjJ-OxhwkMQpepjQsOuk">
+            src="https://maps.googleapis.com/maps/api/js?key=my_maps_key">
     </script>
   </head>
   <body onload="initialize();">
